# CAP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SetupHomeCap 2.sh  Setup_CAP  Setup_CAP.sh  tempoKeep.rtf
Ampt/: AmptEventReader.cpp  AmptEventReader.hpp  CMakeLists.txt
src/: CMakeLists.txt
src/Ampt/: AmptEventReader.cpp  AmptEventReader.hpp  AmptLinkDef.h  CMakeLists.txt  RunAmptSimulation.cpp
src/Archive/: SubSampleStatIterator.cpp  SubSampleStatIterator.hpp
src/Base/: .cmake_install.cmake.icloud  AACollisionGenerator.cpp  BalanceFunctionCalculatorNew.cpp  BalanceFunctionCalculatorNew.hpp  BaseLinkDef.h  BidimGaussFitConfiguration.cpp  BidimGaussFitConfiguration.hpp  BidimGaussFitResult.cpp  BidimGaussFitter.cpp  BidimGaussFitter.hpp  CMakeLists.txt  CanvasCollection.cpp  CanvasCollection.hpp  CanvasConfiguration.cpp  CanvasConfiguration.hpp  ClosureTest.hpp  Collection.hpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryHistograms.hpp  CollisionGeometryMoments.cpp  Configuration.cpp  Configuration.hpp  DataGraph.cpp  DataGraph.hpp  DerivedHistoIterator.cpp  DerivedHistoIterator.hpp  DerivedHistogramCalculator.cpp  DerivedHistogramCalculator.hpp  DetectorFastSimulatorTask.hpp  EnhancedGraph.cpp  EnhancedGraph.hpp  Event.cpp  Event.hpp  EventCountHistos.cpp  EventCountHistos.hpp  EventFilter.cpp  EventFilter.hpp  EventFilterAliceV0.cpp  EventFilterAliceV0.hpp  (+100 more)
src/BasicGen/: BasicGenLinkDef.h  CMakeLists.txt  GaussianGeneratorTask.cpp  GaussianGeneratorTask.hpp  RadialBoostHistos.cpp  RadialBoostHistos.hpp  RadialBoostTask.cpp  RadialBoostTask.hpp  RapidityGenerator.cpp  RapidityGenerator.hpp  ResonanceGenerator.cpp  ResonanceGenerator.hpp
src/Blastwave/: BWLinkDef.h  BWModelEventGenerator.cpp  BWModelEventGenerator.hpp  CMakeLists.txt
src/CAPPythia/: CAPPythiaLinkDef.h  CMakeLists.txt  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaEventGeneratorRho.cpp  PythiaEventGeneratorRho.hpp  PythiaEventReader.cpp  PythiaEventReader.hpp
src/Closure/: ClosureLinkDef.h  SubSampleStatCalculator.cpp  SubSampleStatCalculator.hpp
src/CollGeom/: AACollisionGenerator.cpp  AACollisionGenerator.hpp  CMakeLists.txt  CollGeomLinkDef.h  CollisionGeometryAnalyzer.cpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryGenerator.hpp  CollisionGeometryGradientHistograms.cpp  CollisionGeometryGradientHistograms.hpp  CollisionGeometryHistograms.cpp  CollisionGeometryHistograms.hpp  CollisionGeometryMoments.hpp  NucleonNucleonCollisionGenerator.cpp  NucleonNucleonCollisionGenerator.hpp  NucleusGenerator.cpp  NucleusGenerator.hpp
src/EOS/: .pdg.dat.icloud  .pdgBackup.dat.icloud  .pdgPhysicalKaons copy.dat.icloud  .pdgPhysicalKaons.dat.icloud
src/Epos/: CMakeLists.txt  EposEventReader.cpp  EposEventReader.hpp  EposLinkDef.h
src/Exec/: CMakeLists.txt  ExecLinkDef.h  RunAnalysis.cpp  RunAnalysis.hpp  RunDerivedCalculation.cpp  RunDerivedCalculation.hpp  RunSubsample.cpp  RunSubsample.hpp
src/Garbage/: DerivedHistogramCalculator.cpp
src/Global/: CMakeLists.txt  GlobalAnalyzer.cpp  GlobalAnalyzer.hpp  GlobalDerivedHistogramCalculator.cpp  GlobalDerivedHistogramCalculator.hpp  GlobalDerivedHistos.cpp  GlobalDerivedHistos.hpp  GlobalHistos.cpp  GlobalHistos.hpp  GlobalLinkDef.h  TransverseSpherocityAnalyzer.cpp  TransverseSpherocityAnalyzer.hpp  TransverseSpherocityHistos.cpp  TransverseSpherocityHistos.hpp
src/HadronGas/: Arsenal.hpp  CMakeLists.txt  ChemicalPotential.cpp  ChemicalPotential.hpp  Eos.cpp  Eos.hpp  EosHadronGas.cpp  EosHadronGas.hpp  HadronGas.cpp  HadronGas.hpp  HadronGasGeneratorTask.cpp  HadronGasGeneratorTask.hpp  HadronGasHistograms.cpp  HadronGasHistograms.hpp  HadronGasLinkDef.h  HadronGasParticle.cpp  HadronGasParticle.hpp  HadronGasParticleGenerator.cpp  HadronGasParticleGenerator.hpp  HadronGasVsTempHistograms.cpp  HadronGasVsTempHistograms.hpp  HadronTypeArchive.cpp  ParticleThermalGas.cpp  ParticleThermalGas.hpp  ParticleThermalProperties.cpp  ParticleThermalProperties.hpp  RunClusterModelSimulation.cpp  Table2D.hpp  mesonsList.tex
src/HadronGas_Chun/: .cmake_install.cmake.icloud  Arsenal.cpp  Arsenal.hpp  CMakeLists.txt  ChemicalPotential.cpp  ChemicalPotential.hpp  EosHadronGas.cpp  EosHadronGas.hpp  HadronGas.cpp  HadronGas.hpp  HadronGasGeneratorTask.cpp  HadronGasGeneratorTask.hpp  HadronGasHistograms.cpp  HadronGasHistograms.hpp  HadronGasLinkDef.h  HadronGasVsTempHistograms.cpp  HadronGasVsTempHistograms.hpp  HadronTypeArchive.cpp  HadronTypeArchive.hpp  RunClusterModelSimulation.cpp  Table2D.hpp  fullDecayList.tex
src/Herwig/: CMakeLists.txt  HerwigEventReader.cpp  HerwigEventReader.hpp  HerwigLinkDef.h
src/Hijing/: CMakeLists.txt  HijingEventReader.cpp  HijingEventReader.hpp  HijingLinkDef.h
src/Macros/: Analysis.txt  AnalysisPart.txt  AnalysisPythia.txt  AnalysisPythiaPiKpY8.txt  AnalysisPythiaY8.txt  CalculateDerivedHistogram.C  PlotBFBaryons.C  PlotBFBaryons_version3.C  PlotBFPiKP.C  PlotPythiaBFvsS.C  PlotPythiaDensity.C  PlotRhoDecayBF.C  ResoBaseSum.txt  ResoDerived.txt  ResoSumBase.txt  ResoTest.txt  Run--Analysis.C  RunAna.C  RunAnaPerform.C  RunAnaPerformPtDepEff.C  RunAnaPerformPtDepEff2.C  RunAnaPerformRes.C  RunAnalysis.C  RunAnalysis2.C  RunAnalysis2Eta4.C  RunAnalysis2Eta6.C  RunAnalysis2Y10.C  RunAnalysis2Y6.C  RunAnalysis2Y8.C  RunAnalysis3.C  RunAnalysis3Eta6.C  RunAnalysis3Y10.C  RunAnalysis3Y6.C  RunAnalysis4.C  RunAnalysis4Eta6.C  RunAnalysis4Y10.C  RunAnalysis4Y6.C  RunAnalysis5.C  RunAnalysis5Eta6.C  RunAnalysis5Y10.C  (+29 more)
src/Math/: BesselFunctions.cpp  BesselFunctions.hpp  MathBasicFunctions 2.hpp  MathBasicFunctions.hpp  MathBasicGeometry 2.hpp  MathBasicIntegration.cpp  MathBasicIntegration.hpp  MathBasicInterpolation.cpp  MathBasicInterpolation.hpp  MathBasicSearch.cpp  MathBasicSearch.hpp  MathBasicStatistics 2.hpp  MathBasicStatistics.cpp  Pdf 2.cpp  Pdf.cpp  Pdf.hpp  Vector3 2.hpp  Vector3.hpp  VectorLorentz 2.hpp  VectorLorentz.hpp
src/NuDyn/: CMakeLists.txt  NuDynAnalyzer.cpp  NuDynAnalyzer.hpp  NuDynDerivedHistogramCalculator.cpp  (+8 more)
(+5026 files in other folders)
